<resources>
    <string name="app_name">MyRecipes</string>
    <string name="add_recipe">Add recipe</string>
    <string name="all_recipes">All recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="tv_upload_picture_message">* Press the image above to upload picture</string>
    <string name="enter_recipe_title">Enter recipe title</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="enter_steps">Enter steps</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_details">recipe details</string>
    <string name="recipe_title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_steps">Recipes steps</string>
    <string name="send_recipe">Send recipe</string>
    <string name="username">Username</string>
    <string name="recently_viewed_recipes">Recently viewed recipes:</string>
    <string name="dash">-</string>
    <string name="no_data">No data yet</string>
    <string name="log_in">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="new_user">New user</string>
    <string name="logout">Logout</string>
</resources>