<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.UserLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_2">

        <LinearLayout
            android:id="@+id/fragment_login_ll_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_ll_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fragment_login_tv_page_name"
                android:layout_width="140dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="@string/log_in" />


            <ImageView
                android:id="@+id/fragment_login_app_logo"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/user_home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_login_ll_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/fragment_login_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_username"
                android:background="@color/color_schema_background"
                android:padding="15dp"
                />

            <EditText
                android:id="@+id/fragment_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_password"
                android:background="@color/color_schema_background"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                />

            <CheckBox
                android:id="@+id/fragment_login_cb_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:layout_marginTop="15dp"
                android:background="@color/color_schema_background_2"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>