<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".recipes.RecipeDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_2">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_recipe_details_cv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/color_schema_background_2"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:padding="10dp"
                android:orientation="horizontal" >
                
                <TextView
                    android:id="@+id/fragment_recipe_details_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/recipe_title" />

                <ImageView
                    android:id="@+id/fragment_recipe_details_img"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/recipe" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_recipe_details_cv_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/color_schema_background_2_transparent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_cv_info"
            app:layout_constraintVertical_bias="0.1">

            <LinearLayout
                android:id="@+id/fragment_recipe_details_ll_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/fragment_recipe_details_tv_ingredients_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/ingredients" />

                <TextView
                    android:id="@+id/fragment_recipe_details_tv_ingredients_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:text="@string/ingredients" />

                <TextView
                    android:id="@+id/fragment_recipe_details_tv_steps_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textColor="@color/color_schema_main"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:text="@string/recipe_steps" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <TextView
                        android:id="@+id/fragment_recipe_details_tv_steps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:text="@string/recipe_steps" />
                </ScrollView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fragment_recipe_details_btn_send_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:text="@string/send_recipe"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_marginTop="20dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>